TEST-2, TEST8 Style: 국내대학, 해외대학 디테일페이지 헤더 정리

--- a/templates/country/question_detail.html
+++ b/templates/country/question_detail.html
@@ -9,7 +9,7 @@
             <div class="d-flex align-items-center ">
                 <h3>{{country.country_name}}</h3>
             </div>
-            <button class="light-button create-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <div>
