--- a/templates/country/question_form.html
+++ b/templates/country/question_form.html
@@ -6,7 +6,7 @@
       <h3>{{ country.country_name }}</h3>
     </div>
     <button
-      class="blue-button create-btn"
+      class="blue-button create-btn sm-btn"
       onclick="canIPost('{{ is_authenticated }}')"
     >
       글쓰기
