--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -13,7 +13,7 @@
                     <input class="" placeholder="검색" name="q" value="{{q}}">
                     <button class="" type="submit">검색</button>
                 </form>
-                <button class="light-button create-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+                <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
             </div>
         </div>
         <hr>
