--- a/templates/country/question_search.html
+++ b/templates/country/question_search.html
@@ -7,7 +7,7 @@
             <div class="d-flex align-items-center ">
                 <h3>{{ country.country_name }}</h3>
             </div>
-            <button class="light-button create-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form class="d-flex justify-content-center" action="{% url 'country:question_search' country.pk %}" method="post">
