--- a/static/css/components/detail.css
+++ b/static/css/components/detail.css
@@ -13,6 +13,28 @@
 .create-btn {
   border-radius: 14px;
   border: none;
-  width: 74px;
   height: 28px;
+  font-size: 14px;
+}
+
+.sm-btn {
+  width: 62px;
+}
+
+.md-btn {
+  width: 72px;
+}
+
+.country-btn {
+  margin-bottom: 1px;
+  margin-left: 10px;
+  padding: 6px 11px;
+  border-radius: 14px;
+  font-size: 14px;
+  height: 28px;
+  text-decoration: none;
+}
+
+.country-btn:hover {
+  color: white;
 }
