--- a/templates/domestic/credit_form.html
+++ b/templates/domestic/credit_form.html
@@ -1,12 +1,11 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ domestic.home_name }}</h1>
-                <span>파견교별 학점컷</span>
+                <h3>{{ domestic.home_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="location.href='{% url "domestic:credit_create" domestic.pk %}'"> 내 점수 등록 </button>
+            <button class="blue-button create-btn md-btn" onclick="location.href='{% url "domestic:credit_create" domestic.pk %}'"> 저장하기 </button>
         </div>
         <hr>
         <form action ="" method="POST" enctype="multipart/form-data">
