--- a/templates/domestic/credit_search.html
+++ b/templates/domestic/credit_search.html
@@ -1,12 +1,11 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ domestic.home_name }}</h1>
-                <span>파견교별 학점컷</span>
+                <h3>{{ domestic.home_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIpost('{{ is_authenticated }}','{{ is_enrolled }}')"> 내 점수 등록 </button>
+            <button class="light-button create-btn md-btn" onclick="canIpost('{{ is_authenticated }}','{{ is_enrolled }}')">등록하기</button>
         </div>
         <hr>
         <form class="d-flex justify-content-center" action="{% url 'domestic:credit_search' domestic.pk %}" method="post">
