--- a/templates/domestic/question_form.html
+++ b/templates/domestic/question_form.html
@@ -1,12 +1,11 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ domestic.home_name }}</h1>
-                <span>QnA</span>
+                <h3>{{ domestic.home_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
+            <button class="blue-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form action ="" method="POST" enctype="multipart/form-data">
