--- a/templates/domestic/sister_add.html
+++ b/templates/domestic/sister_add.html
@@ -1,12 +1,11 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ domestic.home_name }}</h1>
-                <span>자매 결연 대학</span>
+                <h3>{{ domestic.home_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIAdd('{{ is_authenticated }}')"> 학교 추가 </button>
+            <button class="light-button create-btn md-btn" onclick="canIAdd('{{ is_authenticated }}')"> 학교추가 </button>
         </div>
         <hr>
         <form  action ="" method="POST"  enctype="multipart/form-data">
