--- a/templates/domestic/wiki_edit.html
+++ b/templates/domestic/wiki_edit.html
@@ -1,10 +1,9 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ domestic.home_name }}</h1>
-                <span>Wiki</span>
+                <h3>{{ domestic.home_name }}</h3>
             </div>
         </div>
         <hr>
