--- a/templates/foreign/create_sister.html
+++ b/templates/foreign/create_sister.html
@@ -1,13 +1,14 @@
 {% extends "foreign/foreign_base.html" %}
 
 {% block contents %}
-<div style="width:750px;">
-    <div class="d-flex align-items-center ">
-        <h1>{{univ.away_name}}</h1>
-        <span>자매 결연 대학</span>
-        <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+<div class="containter category-detail">
+    <div class="d-flex justify-content-between align-items-end">
+        <div class="d-flex align-items-end">
+            <h3>{{univ.away_name}}</h3>
+            <a class="country-btn dark-button" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
+        </div>
+        <button class="btn btn-sm btn-border btn-primary" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교 추가</button>
     </div>
-    <button class="btn btn-sm btn-border btn-primary" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교 추가</button>
     <hr>
     <div>
         학교명
