--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -1,14 +1,13 @@
 {% extends "foreign/foreign_base.html" %}
 {% block contents %}
 
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
-            <div class="d-flex align-items-center ">
-                <h1>{{univ.away_name}}</h1>
-                <span>QnA</span>
-                <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
+            <div class="d-flex align-items-end ">
+                <h3>{{univ.away_name}}</h3>
+                <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <div>
