--- a/templates/foreign/question_form.html
+++ b/templates/foreign/question_form.html
@@ -1,12 +1,14 @@
 {% extends "foreign/foreign_base.html" %}
 {% block contents %}
 {% if type != 'update' or IsQuestionAuthor == True %}
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
-            <h1>{{univ.away_name}}</h1>
-            <span>QnA</span>
-            <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
+            <div class="d-flex align-items-end ">
+                <h3>{{univ.away_name}}</h3>
+                <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
+            </div>
+            
+            <button class="light-button create-btn sm-btn" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form action ="" method="POST" enctype="multipart/form-data">
