--- a/templates/foreign/review_create.html
+++ b/templates/foreign/review_create.html
@@ -1,28 +1,27 @@
 {%extends "foreign/foreign_base.html"%}
 {%block contents%}
 {% if type == 'create' or IsReviewAuthor == True %}
-<div style="width:750px;">
-    <div class="d-flex justify-content-between ">
-        <div class="d-flex align-items-center ">
-            <h1>{{univ.away_name}}</h1>
-            <span>파견교 후기 공유</span>
-            <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+<div class="container category-detail">
+    <div class="d-flex justify-content-between align-items-end">
+        <div class="d-flex align-items-end">
+            <h3>{{univ.away_name}}</h3>
+            <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
         </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="col-sm-12">
+            <form action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <table class="table table-bordered">
+                    {% if request.user == review.post_author or type == 'create' %}
+                    {{form.as_p}}
+                    {% endif %}
+                </table>
+                <input type="submit" value="저장하기" class="btn btn-primary" />
+            </form>
         </div>
-        <hr>
-        <div class="container">
-            <div class="col-sm-12">
-                <form action="" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <table class="table table-bordered">
-                        {% if request.user == review.post_author or type == 'create' %}
-                        {{form.as_p}}
-                        {% endif %}
-                    </table>
-                    <input type="submit" value="저장하기" class="btn btn-primary" />
-                </form>
-            </div>
-        </div>
+    </div>
 
 </div>
 {%else%}
