--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -1,78 +1,77 @@
 {%extends "foreign/foreign_base.html"%}
 {%block contents%}
-<div style="width:750px;">
-    <div class="d-flex justify-content-between ">
-        <div class="d-flex align-items-center ">
-            <h1>{{univ.away_name}}</h1>
-            <span>파견교 후기 공유</span>
-            <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+<div class="container category-detail">
+    <div class="d-flex justify-content-between align-items-end">
+        <div class="d-flex align-items-end ">
+            <h3>{{univ.away_name}}</h3>
+            <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
         </div>
-</div>
-<hr>
-<p>작성자:{{review.post_author.nickname}}</p>
-<p>제목: {{review.title}}</p>
-<p>파견학기: {{review.away_year}}-{{review.away_semester}}</p>
-<p>날짜: {{review.created_at}}</p>
-<p>내용:
-     
-    {% if review.image %}
-    <div><img src="{{review.image.url}}" style="width:700px"/></div>
-    {% endif %}
-    {{review.content | safe}}</p>
-{% if IsReviewAuthor %}
-<form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
-    {% csrf_token %}
-    <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
-</form>
-<a href="{% url "foreign:review_update" univ.pk review.pk%}">수정</a>
-{% endif %}
-<a href="{% url "foreign:review_list" univ.pk %}">목록</a>
-<hr>
-<p>댓글</p>
-<div class="post_{{review.id}} post">
-{%if all_comment %}
-{%for comment in all_comment %}
-<div class="comment_{{comment.id}} d-flex justify-content-between">
-    {{comment.comment_author.nickname}} &#160; &#160; 
-    {{comment.comment_content}}
-    <div>
-    {% if request.user == comment.comment_author %}
-    <button class="btn btn-outline-secondary update " onclick="EditComment({{comment.id}} ,'{{comment.comment_content}}')">수정</button>
-    <button class="btn btn-outline-secondary delete " onclick="onClickDelete({{comment.id}} )">삭제</button>
-    {%endif%}
-    <button id='recomment' onclick="recommentPlus('{{comment.pk}}')">댓글</button><br/>
     </div>
-</div>
-<div class="recomment_list_{{ comment.pk }}">
-    {% for recomment in recomments  %}
-        {% if recomment.comment == comment %}
-        <div class="d-flex justify-content-between" id="recomment_{{ recomment.pk }}">
-            <div>
-                <span>👉 {{ recomment.comment_author.nickname }}</span>
-                <span style="margin-left: 30px;">{{ recomment.comment_content }}</span>
-            </div>
-            {% if recomment.comment_author == request.user %}
-            <div>
-                <button onclick="editReComment('{{ comment.pk }}', '{{ recomment.pk }}','{{ recomment.comment_content }}')">수정</button>
-                <button onclick="onClickDeleteUnder('{{ recomment.pk }}')">삭제</button>
+    <hr>
+    <p>작성자:{{review.post_author.nickname}}</p>
+    <p>제목: {{review.title}}</p>
+    <p>파견학기: {{review.away_year}}-{{review.away_semester}}</p>
+    <p>날짜: {{review.created_at}}</p>
+    <p>내용:
+        
+        {% if review.image %}
+        <div><img src="{{review.image.url}}" style="width:700px"/></div>
+        {% endif %}
+        {{review.content | safe}}</p>
+    {% if IsReviewAuthor %}
+    <form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
+        {% csrf_token %}
+        <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
+    </form>
+    <a href="{% url "foreign:review_update" univ.pk review.pk%}">수정</a>
+    {% endif %}
+    <a href="{% url "foreign:review_list" univ.pk %}">목록</a>
+    <hr>
+    <p>댓글</p>
+    <div class="post_{{review.id}} post">
+    {%if all_comment %}
+    {%for comment in all_comment %}
+    <div class="comment_{{comment.id}} d-flex justify-content-between">
+        {{comment.comment_author.nickname}} &#160; &#160; 
+        {{comment.comment_content}}
+        <div>
+        {% if request.user == comment.comment_author %}
+        <button class="btn btn-outline-secondary update " onclick="EditComment({{comment.id}} ,'{{comment.comment_content}}')">수정</button>
+        <button class="btn btn-outline-secondary delete " onclick="onClickDelete({{comment.id}} )">삭제</button>
+        {%endif%}
+        <button id='recomment' onclick="recommentPlus('{{comment.pk}}')">댓글</button><br/>
+        </div>
+    </div>
+    <div class="recomment_list_{{ comment.pk }}">
+        {% for recomment in recomments  %}
+            {% if recomment.comment == comment %}
+            <div class="d-flex justify-content-between" id="recomment_{{ recomment.pk }}">
+                <div>
+                    <span>👉 {{ recomment.comment_author.nickname }}</span>
+                    <span style="margin-left: 30px;">{{ recomment.comment_content }}</span>
+                </div>
+                {% if recomment.comment_author == request.user %}
+                <div>
+                    <button onclick="editReComment('{{ comment.pk }}', '{{ recomment.pk }}','{{ recomment.comment_content }}')">수정</button>
+                    <button onclick="onClickDeleteUnder('{{ recomment.pk }}')">삭제</button>
+                </div>
+                {% endif %}
             </div>
             {% endif %}
-        </div>
-        {% endif %}
-    {% endfor %}
-</div>
-<div class="recomment_{{ comment.pk }}"></div>
-{%endfor%}
-{%endif%}
-</div>
-
-<form action="./comment_create/" method="POST">
-    {% csrf_token %}
-    <input type="text" name="comment_content" id="comment_{{review.id}}" placeholder='댓글달기...' style="width: 80%;"/>
-    <div class="btn btn-outline-dark submit" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
-        submit
+        {% endfor %}
     </div>
-</form>
+    <div class="recomment_{{ comment.pk }}">
+    {%endfor%}
+    {%endif%}
+    </div>
+
+    <form action="./comment_create/" method="POST">
+        {% csrf_token %}
+        <input type="text" name="comment_content" id="comment_{{review.id}}" placeholder='댓글달기...' style="width: 80%;"/>
+        <div class="btn btn-outline-dark submit" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
+            submit
+        </div>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
