--- a/templates/foreign/sister.html
+++ b/templates/foreign/sister.html
@@ -1,18 +1,19 @@
 {% extends "foreign/foreign_base.html" %}
 
 {% block contents %}
-<div style="width:750px;">
-    <div class="d-flex align-items-center ">
-        <h1>{{univ.away_name}}</h1>
-        <span>자매 결연 대학</span>
-        <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
+<div class="container category-detail">
+    <div class="d-flex justify-content-between align-items-end">
+        <div class="d-flex align-items-end ">
+            <h3>{{univ.away_name}}</h3>
+            <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
+        </div>
+        <button class="light-button create-btn md-btn" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교추가</button>
     </div>
-    <button class="btn btn-sm btn-border btn-primary" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교 추가</button>
     <hr>
     <div>
         {% for key, val in sisters_dict.items %}
         <ul>
-            <h3>{{ key }}</h3>
+            <p>{{ key }}</p>
             {% for sister in val %}
             <a href="{% url "domestic:wiki" sister.pk %}">{{sister.home_name}}</a>
             {% endfor %}
