--- a/static/css/pages/list.css
+++ b/static/css/pages/list.css
@@ -19,7 +19,7 @@
   border-radius: 11px;
   font-weight: normal;
   text-decoration: none;
-  color: black;
+  color: var(--d-gray);
 }
 .lforeign_list a:active {
   background-color: var(--blue);
@@ -45,7 +45,7 @@
   width: 30px;
   height: 30px;
   border-radius: 15px;
-  color: black;
+  color: var(--d-gray);
   background-color: var(--l-gray);
   text-align: center;
   vertical-align: middle;
@@ -61,7 +61,7 @@
 .lforeign_name a {
   font-size: 15px;
   text-decoration: none;
-  color: black;
+  color: var(--d-gray);
   white-space: nowrap;
   padding-right: 20px;
   padding-bottom: 20px;
