TEST-80 Design: 검색 input, button

--- a/static/css/components/post_list.css
+++ b/static/css/components/post_list.css
@@ -8,4 +8,9 @@
 .search-button {
   width: 14px;
   height: 14px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  margin-top: 5px;
+  margin-left: 200px;
 }
