--- a/static/css/pages/list.css
+++ b/static/css/pages/list.css
@@ -11,6 +11,7 @@
   border-radius: 10px;
   background-color: var(--bg);
   line-height: 22px;
+  margin-right: 15px;
 }
 .lforeign_list a {
   font-size: 14px;
