[All] Style: form 안에 있는 input 밖으로 다 뺌

--- a/templates/country/question_form.html
+++ b/templates/country/question_form.html
@@ -5,19 +5,12 @@
     <div class="d-flex align-items-center">
       <h3>{{ country.country_name }}</h3>
     </div>
-    <button
-      class="blue-button create-btn sm-btn"
-      onclick="canIPost('{{ is_authenticated }}')"
-    >
-      글쓰기
-    </button>
+    <input class="blue-button create-btn md-btn" form="frm" type="submit" value="저장하기" />
   </div>
   <hr />
-  <form action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %} {{ form.as_p }}
-    <div class="d-flex justify-content-end">
-      <input type="submit" value="저장하기" />
-    </div>
+  <form id="frm" method="POST" enctype="multipart/form-data">
+    {% csrf_token %} 
+    {{ form.as_p }}
   </form>
 </div>
 
