--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="marginy-40">
             <div class="addForeign-top">파견교 추가</div>
-            <input class="blue-button lgbtn-blue" type="submit" onclick="document.getElementById('frm').submit();" value="저장하기" />
+            <input class="blue-button lgbtn-blue" type="submit" form="frm" value="저장하기" />
         </div>
         <hr />
         <form autocomplete="off">
