--- a/templates/foreign/foreign_base.html
+++ b/templates/foreign/foreign_base.html
@@ -11,8 +11,7 @@
                 <li><a href="{% url "foreign:review_list" univ.pk%}">파견교 후기 공유</a></li>
             </ul>
         </div>
-        <div style="width:750px;">
-            
+        <div>
     {% block contents %}
     {% endblock %}
         </div>
