Style: s-btn 생성, domestic-wiki 태그 수정

--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -12,3 +12,16 @@
   color: var(--d-gray);
   background-color: var(--l-gray);
 }
+
+.m-btn {
+  font-size: 14px;
+  padding: 7px 11px;
+  border: none;
+  border-radius: 15px;
+}
+.s-btn {
+  font-size: 12px;
+  padding: 5px 8px;
+  border: none;
+  border-radius: 15px;
+}
