--- a/templates/domestic/wiki.html
+++ b/templates/domestic/wiki.html
@@ -9,27 +9,27 @@
         <hr>
         <div class="wiki__content">
             <div>
-                <h3>1. 지원 방법</h3>
+                <h4>1. 지원 방법</h4>
                 <button class="light-button m-btn" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','apply')"> 수정 </button>                              
                 <p>{{ domestic.home_apply }}</p>
             </div>
             <div>
-                <h3>2. 필요 서류</h3>
+                <h4>2. 필요 서류</h4>
                 <button class="light-button m-btn" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','document')"> 수정 </button>                              
                 <p>{{ domestic.home_document }}</p>
             </div>
             <div>
-                <p>3. 수학 가능 학기</p>
+                <h4>3. 수학 가능 학기</h4>
                 <button class="light-button m-btn" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','semester')"> 수정 </button>                              
                 <p>{{ domestic.semester }}</p>
             </div>
             <div>
-                <p>4. 교내 장학금 정보</p>
+                <h4>4. 교내 장학금 정보</h4>
                 <button class="light-button m-btn" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','scholarship')"> 수정 </button>                              
                 <p>{{ domestic.home_scholarship }}</p>
             </div>
             <div>
-                <p>5. 유학생 보험 준비</p>
+                <h4>5. 유학생 보험 준비</h4>
                 <button class="light-button m-btn" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','insurance')"> 수정 </button>                              
                 <p>{{ domestic.insurance }}</p>
             </div>
