--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -1,6 +1,6 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div class="container category-detail">
+    <div class="container category-detail post-list">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
                 <h3>{{ domestic.home_name }}</h3>
@@ -11,7 +11,7 @@
                     <input class="search-input" placeholder="검색" name="q" value="{{q}}">
                     <button class="search-button" type="submit"><ion-icon name="search"></ion-icon></button>
                 </form>
-                <button class="light-button create-btn sm-btn" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
+                <button class="light-button create-btn sm-btn" style="margin-left:15px;" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
             </div>
         </div>
         <hr>
@@ -19,14 +19,14 @@
         <table>
             <tr align='center'>
                 <th width='50'>번호</th>
-                <th width='600' >제목</th>
-                <th>날짜</th>
+                <th width='880' >제목</th>
+                <th width='80'>날짜</th>
             </tr>
             {% for question in page_obj %}
             <tr>
                 <td class="numbered" align='center'></td>
                 <td><a href="{% url 'domestic:question_detail' domestic.pk question.pk %}">{{ question.question_title }}</a></td>
-                <td>{{ question.created_at }}</td>
+                <td>{{ question.created_at|date:"Y.m.d" }}</td>
             </tr>
             {% endfor %}
         </table>
