--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,8 +15,8 @@
 /* Pages */
 @import "pages/main.css";
 @import "pages/list.css";
-@import "pages/addForeign.css";
-@import "pages/foreignReview.css";
+@import "pages/univ_search.css";
+@import "pages/review_list.css";
 @import "pages/login.css";
 @import "pages/signup.css";
 @import "pages/certificate.css";
