--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -1,6 +1,6 @@
 {%extends "foreign/foreign_base.html"%}
 {%block contents%}
-<div class="container category-detail">
+<div class="container category-detail review-list">
     <div class="d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end ">
             <h3>{{univ.away_name}}</h3>
@@ -11,17 +11,17 @@
     <hr>
     <table>
         <tr align='center'>
-            <th width='50'>번호</th>
-            <th width='400' >제목</th>
-            <th width='100'>파견 학기</th>
-            <th width='150'>날짜</th>
+            <th width='70'>번호</th>
+            <th width='560' >제목</th>
+            <th width='140'>파견 학기</th>
+            <th width='210'>날짜</th>
         </tr>
         {%for review in page_obj %}
                 <tr>
                     <td class="numbered" align='center'></td>
-                    <td><a href="{% url "foreign:review_detail" univ.pk review.pk %}">{{ review.title }}</a></td>
+                    <td><a href="{% url "foreign:review_detail" univ.pk review.pk %}" style="padding-left: 30px;">{{ review.title }}</a></td>
                     <td align="center">{{review.away_year}}-{{review.away_semester}}</td>
-                    <td align="center">{{ review.created_at }}</td>
+                    <td align="center">{{ review.created_at|date:"Y.m.d" }}</td>
                 </tr>
         {% endfor %}
     </table>
@@ -31,21 +31,21 @@
         <h6>첫 번째로 정보를 등록해주세요!</h6>
     </div>
     {% endif %}
-    <div style="text-align:center">
-        <div class="pagination">
-        
-            <div style="width:35%; margin: 5px;">
+    <div style="text-align:center ">
+        <div class="pagination  d-flex justify-content-center">
+            <div>
             {% if page_obj.has_previous %}
-                <a class="abutton" href="?page=1">맨 앞으로</a>
-                <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}">이전</a>
+                <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
+            {% else %}
+                <a class="abutton"><i class="fas fa-chevron-left"></i></a>
             {% endif %}
-            </div>
+           </div>
 
-            <div style="width:30%; margin: 5px;">
+            <div class="page-number">
             {% for page in page_obj.paginator.page_range %}
                 {% if page >= page_obj.number|add:-2 and page <= page_obj.number|add:2 %}
                 <span class="{% if page == page_obj.number %}current{% endif %}">
-                    <a href="?page={{ page }}" {% if page == page_obj.number %}style="font-weight: bold;"{%endif%}>{{ page}}</a>
+                    <a href="?page={{ page }} "  class="numbering" {% if page == page_obj.number %}style="background-color: var(--blue); color: white;"{%endif%}>{{ page}}</a>
                     
                 </span>
                 {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
@@ -54,13 +54,13 @@
             {% endfor %}
             </div>
 
-            <div style="width:35%; margin: 5px;">
+            <div>
             {% if page_obj.has_next %}
-                <a class="abutton" href="?page={{ page_obj.next_page_number }}">다음</a>
-                <a class="abutton" href="?page={{ page_obj.paginator.num_pages }}">맨 뒤로</a>
+                <a class="abutton" href="?page={{ page_obj.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
+            {% else %}
+                <a class="abutton"><i class="fas fa-chevron-right"></i></a>
             {% endif %}
             </div>
-
         </div>  
     </div> 
 
