--- a/static/css/components/post_list.css
+++ b/static/css/components/post_list.css
@@ -30,7 +30,38 @@
   padding-bottom: 15px;
   color: var(--d-gray);
 }
+
 .post-list td a {
   text-decoration: none;
   color: var(--d-gray);
+}
+
+.post-list .page-number {
+  margin: 0 20px;
+}
+
+.post-list .numbering {
+  font-size: 17px;
+  border-radius: 14px;
+  background-color: var(--l-gray);
+  width: 22px;
+  height: 22px;
+  padding: 0 8px;
+  margin: 0 3px;
+  text-decoration: none;
+  color: var(--d-gray);
+}
+
+.post-list .numbering:focus {
+  font-weight: normal;
+}
+
+.post-list .fa-chevron-right,
+.post-list .fa-chevron-left {
+  color: var(--m-gray);
+}
+
+.post-list .fa-chevron-right:hover,
+.post-list .fa-chevron-left:hover {
+  cursor: pointer;
 }
