TEST-84 Style: 국내 대학 QnA Q 폼

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@
 @import "components/button.css";
 @import "components/detail.css";
 @import "components/post_list.css";
+@import "components/post_form.css";
 @import "components/post.css";
 @import "components/comment.css";
 @import "components/undercomment.css";
