TEST-87 Style: review form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@
 @import "pages/list.css";
 @import "pages/univ_search.css";
 @import "pages/review_list.css";
+@import "pages/review_create.css";
 @import "pages/login.css";
 @import "pages/signup.css";
 @import "pages/certificate.css";
