Style: main team

--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -26,41 +26,41 @@
 <section class="main__team d-flex flex-column align-items-center justify-content-center">
     <div class="righteous team-title">Team</div>
     <div class="profile-set d-flex justify-content-between">
-        <div class="profile-card d-flex align-items-center">
-            <img src="/static/css/img/profile_img_1.png" alt="민지프로필">
-            <div>
-                <span class="p-position">대장</span>
-                <span class="p-name">곽민지</span>
+        <div class="profile-card pc-space d-flex align-items-center">
+            <img class="p-img" src="/static/css/img/profile_img_1.png" alt="민지프로필">
+            <div class="p-text">
+                <p class="p-position">대장</p>
+                <p class="p-name">곽민지</p>
                 <div class="p-border"></div>
                 <p class="p-content">많이 부족한 코린이 팀장 👻<br>
                     교환학생 경험을 바탕으로 열심히 만들었습니다.</p>
             </div>
         </div>
-        <div class="profile-card d-flex align-items-center">
-            <img src="/static/css/img/profile_img_2.png" alt="민지프로필">
-            <div>
-                <span class="p-position">엇 잠시만..</span>
-                <span class="p-name">김경린</span>
+        <div class="profile-card pc-space d-flex align-items-center">
+            <img class="p-img" src="/static/css/img/profile_img_2.png" alt="민지프로필">
+            <div class="p-text">
+                <p class="p-position">엇 잠시만..</p>
+                <p class="p-name">김경린</p>
                 <div class="p-border"></div>
                 <p class="p-content">유니커넥트에서 '엇..잠시만..'를 맡고 있습니다 😁<br>
                     뚝딱뚝딱하다 보니 이렇게 멋지게 완성되었네요.</p>
             </div>
         </div>
         <div class="profile-card d-flex align-items-center">
-            <img src="/static/css/img/profile_img_3.png" alt="민지프로필">
-            <div>
-                <span class="p-position">멋쟁이</span>
-                <span class="p-name">양정연</span>
+            <img class="p-img" src="/static/css/img/profile_img_3.png" alt="민지프로필">
+            <div class="p-text">
+                <p class="p-position">멋쟁이</p>
+                <p class="p-name">양정연</p>
                 <div class="p-border"></div>
                 <p class="p-content">코딩 배우러 들어온 동아리에서 디자인하기🤪~<br>
                     좋은 팀원들 만나 호강하고 갑니다!</p>
             </div>
         </div>
         <div class="profile-card d-flex align-items-center">
-            <img src="/static/css/img/profile_img_4.png" alt="민지프로필">
-            <div>
-                <span class="p-position">막내</span>
-                <span class="p-name">김지민</span>
+            <img class="p-img" src="/static/css/img/profile_img_4.png" alt="민지프로필">
+            <div class="p-text">
+                <p class="p-position">막내</p>
+                <p class="p-name">김지민</p>
                 <div class="p-border"></div>
                 <p class="p-content">안녕하세요 김지민입니다<br>
                     좋은 팀원들과 함께 열심히 만들었습니다</p>
