--- a/static/css/pages/main.css
+++ b/static/css/pages/main.css
@@ -66,3 +66,33 @@
   height: 210px;
   border-radius: 10px;
 }
+.pc-space {
+  margin-bottom: 20px;
+}
+
+.p-position {
+  font-weight: 300;
+  font-size: 10px;
+  margin-bottom: 5px;
+}
+.p-name {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+.p-border {
+  width: 50px;
+  height: 1px;
+  background-color: var(--blue);
+  margin-bottom: 15px;
+}
+.p-content {
+  font-size: 13px;
+  line-height: 20px;
+}
+.p-text {
+  margin-left: 10px;
+}
+.p-img {
+  margin-left: 10px;
+}
