TEST-2 Style: 국내대학 파견교별 학점컷 CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,7 @@
 @import "pages/signup.css";
 @import "pages/certificate.css";
 @import "pages/myquestion.css";
+@import "pages/credit.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
