TEST-2 Fix: 국내대학 파견교별 학점컷 검색창 CSS 수정

--- a/static/css/pages/credit.css
+++ b/static/css/pages/credit.css
@@ -21,7 +21,9 @@
   height: 28px;
   font-size: 12px;
   position: absolute;
-  margin-right: 203px;
+  margin-right: 211px;
+  width: 69px;
+  padding: 0;
 }
 
 .credit-option:focus {
