TEST-2 Style: 국내대학 파견교별 학점컷 정보 없을 때

--- a/templates/domestic/credit_list.html
+++ b/templates/domestic/credit_list.html
@@ -52,13 +52,13 @@
                 <th width='150'>이수학점</th>
                 <th width='150'>평점평균</th>
                 <th width='150'>지원시기</th>
-                <th width='150'>지원학교</th>
+                <th width='300'>지원학교</th>
                 <th width='150'>합격여부</th>
             </tr>
         </table>
-        <div class='text-center m-5'>
-            <h5>등록된 정보가 없습니다</h5>
-            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        <div class='text-center m-4'>
+            <p style="margin-bottom: 5px;">등록된 정보가 없습니다</p>
+            <p>첫 번째로 정보를 등록해주세요!</p>
         </div>
         {% endif %}
         <div class="pagination d-flex justify-content-center">
