--- a/templates/country/country_univ.html
+++ b/templates/country/country_univ.html
@@ -1,7 +1,7 @@
 {%extends "country/country_base.html"%} 
 
 {%block contents%}
-<div class="container category-detail">
+<div class="container2 category-detail">
   <div class="d-flex justify-content-between">
     <div class="d-flex align-items-center">
       <h3>{{country.country_name}}</h3>
