--- a/templates/country/question_detail.html
+++ b/templates/country/question_detail.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex justify-content-evenly ">
     
-    <div class="container category-detail">
+    <div class="container2 category-detail">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
                 <h3>{{country.country_name}}</h3>
