--- a/templates/country/question_form.html
+++ b/templates/country/question_form.html
@@ -1,6 +1,6 @@
 {%extends "country/country_base.html"%} {% block contents %}
 
-<div class="container category-detail">
+<div class="container2 category-detail">
   <div class="d-flex justify-content-between align-items-end">
     <div class="d-flex align-items-center">
       <h3>{{ country.country_name }}</h3>
