--- a/templates/country/question_search.html
+++ b/templates/country/question_search.html
@@ -2,7 +2,7 @@
 {% block contents %}
 
     
-    <div class="container category-detail">
+    <div class="container2 category-detail">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
                 <h3>{{ country.country_name }}</h3>
