--- a/templates/domestic/credit_list.html
+++ b/templates/domestic/credit_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block contents %}
-    <div class="container category-detail credit-list">
+    <div class="container2 category-detail credit-list">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center">
                 <h3>{{ domestic.home_name }}</h3>
@@ -17,7 +17,7 @@
                         <option>단과대학</option>
                         <option>합격여부</option>
                     </select>
-                    <input class="credit-search" name="q" value="{{q}}">
+                    <input class="credit-search" name="q" value="{{q}}" autocomplete="off">
                     <button class="credit-button" type="submit"><ion-icon name="search"></ion-icon></button>
                 </form>
                 <button class="ligth-button create-btn md-btn" onclick="canIpost('{{ is_authenticated }}','{{ is_enrolled }}')" style="margin-left: 15px;"> 등록하기 </button>
