--- a/templates/domestic/wiki_edit.html
+++ b/templates/domestic/wiki_edit.html
@@ -1,6 +1,6 @@
 {% extends "domestic/domestic_base.html" %}
 {% block contents %}
-    <div class="container category-detail">
+    <div class="container2 category-detail">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
                 <h3>{{ domestic.home_name }}</h3>
