--- a/templates/foreign/create_sister.html
+++ b/templates/foreign/create_sister.html
@@ -1,7 +1,7 @@
 {% extends "foreign/foreign_base.html" %}
 
 {% block contents %}
-<div class="containter category-detail">
+<div class="container2 category-detail">
     <div class="d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end">
             <h3>{{univ.away_name}}</h3>
