--- a/templates/foreign/question_list.html
+++ b/templates/foreign/question_list.html
@@ -3,7 +3,7 @@
 {% block contents %}
 
     
-    <div class="container category-detail">
+    <div class="container2 category-detail">
         <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-end ">
                 <h3>{{univ.away_name}}</h3>
