--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -1,6 +1,6 @@
 {%extends "foreign/foreign_base.html"%}
 {%block contents%}
-<div class="container category-detail d-flex flex-column">
+<div class="container2 category-detail d-flex flex-column">
     <div class="d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end ">
             <h3>{{univ.away_name}}</h3>
