--- a/templates/foreign/univ_create.html
+++ b/templates/foreign/univ_create.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 {%block content%}
-<div class="container">
+<div class="container2">
     <div class="col-sm-12">
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
