TEST-83 Style: review-detail 중간 커밋

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,7 @@
 @import "pages/univ_search.css";
 @import "pages/review_list.css";
 @import "pages/review_create.css";
+@import "pages/review_detail.css";
 @import "pages/login.css";
 @import "pages/signup.css";
 @import "pages/certificate.css";
