--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -6,28 +6,32 @@
             <h3>{{univ.away_name}}</h3>
             <a class="dark-button country-btn" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
         </div>
+        <a href="{% url "foreign:review_list" univ.pk %}" class="m-btn light-button" style="text-decoration: none;">목록보기</a>
     </div>
     <hr>
-    <p>작성자:{{review.post_author.nickname}}</p>
-    <p>제목: {{review.title}}</p>
-    <p>파견학기: {{review.away_year}}-{{review.away_semester}}</p>
-    <p>날짜: {{review.created_at}}</p>
-    <p>내용:
-        
-        {% if review.image %}
-        <div><img src="{{review.image.url}}" style="width:700px"/></div>
-        {% endif %}
-        {{review.content | safe}}</p>
-    {% if IsReviewAuthor %}
-    <form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
-        {% csrf_token %}
-        <button onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
-    </form>
-    <a href="{% url "foreign:review_update" univ.pk review.pk%}">수정</a>
-    {% endif %}
-    <a href="{% url "foreign:review_list" univ.pk %}">목록</a>
-    <hr>
-    <p>댓글</p>
+    <div class="review-detail-object">
+        <div class="d-flex justify-content-between align-items-end review-detail-top">
+            <div>
+            <span class="review-detail-title">{{review.title}}</span>
+            <span class="review-detail-date">{{review.away_year}} {{review.away_semester}}</span>
+            </div>
+            <div>
+            {% if IsReviewAuthor %}
+            <form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
+                {% csrf_token %}
+                <button class="light-button s-btn " onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
+            </form>
+            <button class="light-button s-btn ra_btn" onclick="location.href='{% url "foreign:review_update" univ.pk review.pk%}' ">수정</button>
+            {% endif %}
+            </div>
+        </div>
+        <div>
+        <span class="review-detail-name">{{review.post_author.nickname}}</span>
+        <span class="review-detail-date">{{review.created_at|date:"Y.m.d"}}</span>
+        </div>
+        {{review.content | safe}}
+    </div>
+    <hr class="review-detail-hr">
     <div class="post_{{review.id}} post">
     {%if all_comment %}
     {%for comment in all_comment %}
@@ -65,35 +69,34 @@
     {%endif%}
     </div>
 
-    <form action="./comment_create/" method="POST">
+    <form action="./comment_create/" method="POST" class="d-flex justify-content-between align-items-end review-comment-form">
         {% csrf_token %}
         <input type="text" name="comment_content" id="comment_{{review.id}}" placeholder='댓글달기...' style="width: 80%;"/>
-        <div class="btn btn-outline-dark submit" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
-            submit
-        </div>
+        <button class=" blue-button review-detail-submitbtn" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">
+            등록
+        </button>
     </form>
 </div>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
         const onClickComment= async(is_authenticated,post_id, comment_content) => {  
-        console.log(is_authenticated)
             if (is_authenticated == 'False') {
                 alert('로그인이 필요한 서비스입니다.');
                 window.location.href='{% url "login:login" %}';
-        }else{
-        const url = './comment_create/';
-        const res= await fetch(url,{        
-            method: 'POST',
-            headers:{
-            'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: JSON.stringify({is_authenticated:is_authenticated,post_id:post_id,comment_content:comment_content})
-        }); 
-    
-        const {post_id:id,comment_content:content,comment_id:c_id}= await res.json();        
-        commentHandleResponse(id,content,c_id);
-    }
+            }else{
+            const url = './comment_create/';
+            const res= await fetch(url,{        
+                method: 'POST',
+                headers:{
+                'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: JSON.stringify({is_authenticated:is_authenticated,post_id:post_id,comment_content:comment_content})
+            }); 
+        
+            const {post_id:id,comment_content:content,comment_id:c_id}= await res.json();        
+            commentHandleResponse(id,content,c_id);
+            }
     };
 
     const commentHandleResponse=(post_id,comment_content,comment_id) => {
@@ -101,11 +104,11 @@
         const newDiv = document.createElement('div')
         newDiv.innerHTML = `
         <div class="comment_${comment_id} d-flex justify-content-between">
-        {{request.user.nickname}} &#160; &#160; ${comment_content}
+            {{request.user.nickname}} &#160; &#160; ${comment_content}
             <div>
-            <button class="btn btn-outline-secondary update " onclick="EditComment('${comment_id}', '${comment_content}')">수정</button>
-            <div class="btn btn-outline-secondary delete" onclick="onClickDelete('${comment_id}')">삭제</div>
-            <button id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
+                <button class="btn btn-outline-secondary update " onclick="EditComment('${comment_id}', '${comment_content}')">수정</button>
+                <div class="btn btn-outline-secondary delete" onclick="onClickDelete('${comment_id}')">삭제</div>
+                <button id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
             </div>
         </div>
         <div class="recomment_list_${comment_id}">
