TEST-83 Style:review-detail 중간 커밋

--- a/static/css/pages/review_detail.css
+++ b/static/css/pages/review_detail.css
@@ -39,6 +39,8 @@
   font-weight: 500;
   line-height: 35px;
   border: none;
+  display: inline;
+  text-align: center;
 }
 .review-comment-form {
   width: 100%;
